@@ -6,4 +6,10 @@ package edu.colorado.phet.balanceandtorque.common;
  */
 public class BalanceAndTorqueSharedConstants {
     public static final double FRAME_RATE = 30.0;
+
+    // The following constant controls whether meters are shown as their
+    // actual values, or whether quarter meter increments are used.  This
+    // was added to support the Stanford study, since they found that the
+    // decimal values confused younger students.  See #3537.
+    public static final boolean USE_QUARTER_METER_INCREMENTS = true;
 }
