@@ -1,3 +1,4 @@
+Added code that will present the increments on the plank as integer values rather than quarter meters, see #3537.
 Added a parameter to the sim sharing message that describes masses on the plank at the beginning of a challenge that indicates whether the mass values are visible.
 Added a parameter to the message that is sent when masses are added to the plank that indicates whether the mass value is visible.
 Changed the wording of the prompt used for studies.
